objects/ob1__Output_History_Body__c.object
<CustomObject>
    <fields>
        <fullName>ob1__Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ob1__Output_History__c</fullName>
        <label>Output History</label>
        <referenceTo>ob1__Output_History__c</referenceTo>
        <relationshipLabel>Output History Bodies</relationshipLabel>
        <relationshipName>Output_History_Bodies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ob1__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Output History Body</label>
    <nameField>
        <displayFormat>OHB-{0}</displayFormat>
        <label>Output History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Output History Bodies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>